add css and first layout

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -1,7 +1,9 @@
 {
   "config": {
     "googleAnalyticsId" : "",
-    "themeTitle" : "Nunjucks Starter Template"
+    "themeTitle" : "Nunjucks Starter Template",
+    "header": "header-default.njk",
+    "sidebar": "sidebar-default.njk"
   },
   "paths": {
     "base": "/",
